# ksh-serp-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scrape.yml
dashboard/: app.py
data/: keywords.csv  ota_domains.txt  serp.db
scripts/: capture_fixture.py
src/ksh_serp/: classifier.py  config.py  db.py  parser.py  scraper.py  serpapi_client.py
tests/: test_classifier.py  test_db.py  test_parser.py
tests/fixtures/: brand_aio_desktop.json  brand_aio_mobile.json  nonbrand_aio_desktop.json  nonbrand_hotelpack_desktop.json  real_brand_desktop.json  real_nonbrand_aio_test.json  real_nonbrand_desktop.json
