[project]
name = "ksh-serp-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "serpapi>=0.1.5",
    "python-dotenv>=1.0.0",
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
